Fix filter-track active on mobile overflow

--- a/src/styles/contentGrid.css
+++ b/src/styles/contentGrid.css
@@ -533,6 +533,9 @@ article .new-label {
   }
 
   .filter-track.active {
-    padding: 0 28px;
+    width: 100%;
+    padding: 0 5px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
